# ChatAGH_UI

./: .env.example  .env.template  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
web_app/: db.sqlite3  manage.py
web_app/accounts/: forms.py  urls.py  views.py
web_app/chat/: models.py  selectors.py  services.py  urls.py  views.py
web_app/chat/migrations/: 0001_initial.py
web_app/chat/static/css/: style.css
web_app/chat/static/js/: chat.js
web_app/templates/: base.html
web_app/templates/accounts/: login.html  register.html
web_app/templates/chat/: conversation.html
web_app/web_app/: asgi.py  settings.py  urls.py  wsgi.py
