[project]
name = "chatagh-ui"
version = "0.1.0"
description = "User Interface for ChatAGH"
authors = [
    {name = "maikelele",email = "lahcim.md@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "django (>=5.2.6,<6.0.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "chatagh-rag @ git+https://github.com/ChatAGH/ChatAGH_RAG.git",
    "django-extensions (>=4.1,<5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false